<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@color/colorPrimary">

        <TextView
            android:text="@string/pharmacist_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:padding="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:textSize="16sp"
            android:text="@string/pharmacist_settings_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="12sp"
            android:id="@+id/pharmacist_settings_database_description"
            android:text="@string/pharmacist_settings_database_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/pharmacist_settings_database_button"
            android:text="@string/pharmacist_settings_database_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>